# ViToSA-1.0

./: LICENSE  README.md  requirements.txt  setup.cfg
.github/workflows/: workflow.yml
vitosa_pipeline/: __init__.py  vitosa_pipeline.py
vitosa_pipeline.egg-info/: PKG-INFO  SOURCES.txt
