[metadata]
name = vitosa
version = 1.0
author = Luan Thanh Nguyen
author_email = luannt@uit.edu.vn
description = Vietnamese Audio-based Toxic Spans Detection Pipeline
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tarudesu/ViToSA-1.0
license = MIT
license_files = LICENSE
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Intended Audience :: Developers

[options]
packages = find:
python_requires = >=3.8
include_package_data = True
install_requires =
    torch>=2.0.0
    torchaudio>=2.0.0
    transformers>=4.30.0
    huggingface_hub>=0.20.0
